k8s/uat/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-uat
  labels:
    environment: uat
    app: employee-management
