k8s/uat/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: employee-uat
  labels:
    app: employee-management-frontend
    environment: uat
spec:
  type: ClusterIP
  selector:
    app: employee-management-frontend
    environment: uat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
